# controllers/oauthController.go
@@ -1,19 +1,14 @@
 package controllers
 
 import (
-	"encoding/json"
-	"fmt"
-	"io"
-	"net/http"
-	"os"
-	"strings"
-	"time"
+	"errors"
 
-	"github.com/Haidarr-h/backend-go/config"
-	"github.com/Haidarr-h/backend-go/models"
+	"github.com/Haidarr-h/backend-go/dto"
+	"github.com/Haidarr-h/backend-go/pkg/logger"
+	"github.com/Haidarr-h/backend-go/pkg/response"
+	"github.com/Haidarr-h/backend-go/pkg/validation"
+	"github.com/Haidarr-h/backend-go/services"
 	"github.com/gin-gonic/gin"
-	"github.com/golang-jwt/jwt/v5"
-	"gorm.io/gorm"
 )
 
 type GoogleTokenRequest struct {
@@ -27,151 +22,47 @@ type GoogleUserInfo struct {
 	Picture string `json:"picture"`
 }
 
+type OAuthController struct {
+	oAuthService *services.OAuthService
+}
+
+func NewOAuthController(oAuthService *services.OAuthService) *OAuthController {
+	return &OAuthController{oAuthService: oAuthService}
+}
+
 // GoogleMobileSignIn godoc
 // @Summary      Sign in with Google
 // @Description  Authenticate user via Google ID token (mobile flow) and return a JWT token
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        body  body      GoogleTokenRequest  true  "Google ID Token"
-// @Success      200   {object}  map[string]interface{}  "Returns JWT token and user info"
-// @Failure      400   {object}  map[string]interface{}  "id_token is required"
-// @Failure      401   {object}  map[string]interface{}  "Invalid Google token"
-// @Failure      500   {object}  map[string]interface{}  "Internal server error"
+// @Param        body  body      dto.GoogleSignInReq  true  "Google ID Token"
+// @Success      200   {object}  dto.GoogleSignInRes  "Returns JWT token and user info"
+// @Failure      400   {object}  dto.ErrorRes400
+// @Failure      500   {object}  dto.ErrorRes500
 // @Router       /auth/google/mobile [post]
-func GoogleMobileSignIn(c *gin.Context, cfg *config.Config) {
-	// 1. Get the ID token from Flutter (sdks)
-	var req GoogleTokenRequest
+func (rc *OAuthController) GoogleMobileSignIn(c *gin.Context) {
+
+	// 1. Parse the ID token from client
+	var req dto.GoogleSignInReq
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "id_token is required"})
+		response.BadRequest(c, "bad request", validation.ParseValidationErrors(err))
 		return
 	}
 
-	// 2. Verify the token with Google + get user info
-	googleUser, err := verifyGoogleToken(req.IDToken)
+	// 2. pass to service
+	result, err := rc.oAuthService.GoogleSignIn(req)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid Google token"})
-		return
-	}
-	fmt.Printf("Google user: %+v\n", googleUser)
-
-	// 3. Find or create the user in your DB
-	var user models.User
-	result := cfg.DB.Where("google_id = ?", googleUser.Sub).First(&user)
-
-	if result.Error == gorm.ErrRecordNotFound {
-		// Check if email already exists
-		emailResult := cfg.DB.Where("email = ?", googleUser.Email).First(&user)
-
-		switch emailResult.Error {
-		case gorm.ErrRecordNotFound:
-			// if email not found = brand new user
-			baseUsername := strings.Split(googleUser.Email, "@")[0]
-			user = models.User{
-				Email:    googleUser.Email,
-				FirstName: googleUser.Name,
-				LastName: googleUser.Name,
-				GoogleID: &googleUser.Sub,
-				Picture:  &googleUser.Picture,
-				Username: baseUsername,
-			}
-
-			if err := cfg.DB.Create(&user).Error; err != nil {
-				c.JSON(http.StatusInternalServerError, gin.H{
-					"error": "failed to create user",
-				})
-				return
-			}
-		case nil:
-			// Email already exist (signed up manually before) - Link google ID
-			if err := cfg.DB.Model(&user).Updates(map[string]interface{}{
-				"google_id": googleUser.Sub,
-				"picture":   googleUser.Picture,
-			}).Error; err != nil {
-				c.JSON(http.StatusInternalServerError, gin.H{
-					"error": "failed to link google account",
-				})
-				return
-			}
-		default:
-			// Unexpected DB error — don't proceed
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "database error"})
+		if errors.Is(err, services.ErrInvalidGoogleIDToken) {
+			response.BadRequest(c, "bad request - failed id token verification", err.Error())
 			return
 		}
-	}
 
-	// 4. create refresh token
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-		"sub": fmt.Sprintf("%v", user.ID),
-		"exp": time.Now().Add(time.Hour * 24 * 30).Unix(),
-	})
-
-	tokenString, err := token.SignedString([]byte(os.Getenv("REFRESH_SECRET")))
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create token"})
+		logger.Log.Error("invalid sign in by google", "error", err)
+		response.InternalError(c, "internal server error", "internal server error")
 		return
 	}
 
-	// 5. create access token
-	accessToken := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-		"sub": fmt.Sprintf("%v", user.ID),
-		"exp": time.Now().Add(time.Hour * 12).Unix(),
-	})
-
-	accessTokenString, err := accessToken.SignedString([]byte(os.Getenv("SECRET")))
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create token"})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"refresh_token": tokenString,
-		"access_name": accessTokenString,
-		"user": gin.H{
-			"id":      user.ID,
-			"email":   user.Email,
-			"name":    user.FirstName,
-			"picture": user.Picture,
-		},
-	})
-}
-
-// Validate the ID Token with google endpoint
-func verifyGoogleToken(idToken string) (*GoogleUserInfo, error) {
-	url := "https://oauth2.googleapis.com/tokeninfo?id_token=" + idToken
-
-	resp, err := http.Get(url)
-	if err != nil {
-		return nil, err
-	}
-
-	defer resp.Body.Close()
-
-	// check if google accept it (if expired, malformed, fake)
-	if resp.StatusCode != http.StatusOK {
-		return nil, fmt.Errorf("invalid token")
-	}
-
-	// read the body to get user data
-	body, err := io.ReadAll(resp.Body)
-	if err != nil {
-		return nil, err
-	}
-
-	// put the user data to the userInfo
-	var userInfo GoogleUserInfo
-	if err := json.Unmarshal(body, &userInfo); err != nil {
-		return nil, err
-	}
-
-	// make sure the token intended for our app
-	clientID := os.Getenv("GOOGLE_CLIENT_ID")
-	var tokenData map[string]interface{}
-
-	json.Unmarshal(body, &tokenData)
-	if aud, ok := tokenData["aud"].(string); !ok || aud != clientID {
-		return nil, fmt.Errorf("token audience mismatch")
-	}
-
-	return &userInfo, nil
+	// 3. success
+	response.OK(c, "sign in by google successfull", result)
 }
